# cpp_multi

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  sonar-project.properties
app/: CMakeLists.txt  main.cpp
bw-output/: compile_commands.json
geometry/: CMakeLists.txt
geometry/include/geometry/: point.h  shape.h  transform.h
geometry/src/: point.cpp  shape.cpp  transform.cpp
io/: CMakeLists.txt
io/include/io/: file_writer.h  logger.h
io/src/: file_writer.cpp  logger.cpp
